# ISPCTextureCompressor

./: CMakeLists.txt  Makefile.osx
ispc_texcomp/: CMakeLists.txt
