cmake_minimum_required (VERSION 3.20) 
project(ISPCTextureCompressor)

list(APPEND CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake")
include(TargetArchDetect)

target_architecture(TARGET_ARCH)

if((TARGET_ARCH MATCHES "x86_64" OR TARGET_ARCH MATCHES "ia64") AND NOT OF_32BIT)
        set(ARCH_BIT 64)
else()
        set(ARCH_BIT 32)
endif()

IF(${CMAKE_HOST_SYSTEM_NAME} MATCHES "Windows")
    SET(ISPC_COMPILER_PATH ${PROJECT_SOURCE_DIR}/../../Windows/bin/)
    SET(ISPC_COMPILER ispc.exe)
    IF(NOT ${CMAKE_CROSSCOMPILING})
        if(${MSVC})
            SET(CMAKE_AR lib)
            if(${ARCH_BIT} MATCHES 64)
                SET(ISPC_OPTIONS --arch=x86-64 --target=sse2,avx)
            else()
                SET(ISPC_OPTIONS --arch=x86 --target=sse2,avx))
            endif()
        else()
            if(${ARCH_BIT} MATCHES 64)
                SET(ISPC_OPTIONS --arch=x86-64 --target=sse2,avx)
            else()
                SET(ISPC_OPTIONS --arch=x86 --target=sse2,avx)
            endif()
        endif(${MSVC})
    ELSE()
        if(PSP2)
            SET(ISPC_OPTIONS --arch=arm --cpu=cortex-a9 --target=neon-i32x4)
        endif()
    ENDIF()
ELSEIF(${CMAKE_HOST_SYSTEM_NAME} MATCHES "Darwin")
    SET(ISPC_COMPILER_PATH ${PROJECT_SOURCE_DIR}/../../Darwin/bin/)
    SET(ISPC_COMPILER ispc)
    SET(ISPC_OPTIONS --arch=x86-64 --target=sse2,avx)
ELSEIF(${CMAKE_HOST_SYSTEM_NAME} MATCHES "FreeBSD")
    SET(ISPC_COMPILER_PATH ${PROJECT_SOURCE_DIR}/../../FreeBSD/bin/)
    SET(ISPC_COMPILER ispc)
    SET(ISPC_OPTIONS --arch=x86-64 --target=sse2,avx)
ELSE()
    SET(ISPC_COMPILER_PATH ${PROJECT_SOURCE_DIR}/../../Linux/bin/)
    SET(ISPC_COMPILER ispc)
    SET(ISPC_OPTIONS --arch=x86-64 --target=sse2,avx)
ENDIF(${CMAKE_HOST_SYSTEM_NAME} MATCHES "Windows")

# override ISPC_OPTIONS if build for android
IF(${CMAKE_SYSTEM_NAME} MATCHES "Android")
    SET(LLVM_COMPILER_PATH ${ISPC_COMPILER_PATH})
    SET(ISPC_COMPILER_PATH ${PROJECT_SOURCE_DIR}/../../External/Android/bin/)
    SET(ISPC_OPTIONS --arch=arm --cpu=cortex-a9 --target=neon-i32x4)
ENDIF()

# common options for ispc
SET(ISPC_OPTIONS ${ISPC_OPTIONS} -O2  --opt=fast-math --pic)

add_subdirectory(ispc_texcomp)
